# libreoffice-impress-remote

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  REUSE.toml  SECURITY.md  TODO.md  pyproject.toml  pyrightconfig.json
.github/: CODEOWNERS  GOVERNANCE.md  SECURITY.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  github-native.yml  release.yml
deploy/cloudflare/: README.md  dashboard-worker.mjs  package.json  wrangler.toml
deploy/python-relay/: install-linux-service.sh  requirements.txt  run-relay.ps1  run-relay.py  uninstall-linux-service.sh  windows-service.py  (+1 more)
docs/: README.md  architecture.md  feature-matrix.md  libreoffice-extension.md  libreoffice-upstream-architecture.md  localization.md  presenter-remote-cross-platform-implementation-blueprint.md  protocol.md  relay-server.md  relay.md  release-readiness.md  roadmap.md  technical-reference.md  test-before-release.md  troubleshooting.md  user-guide.md
extension/: Addons.xcu  Controller.xcu  ProtocolHandler.xcu  Settings.xcs  Settings.xcu  description.xml
localizations/: en.json  tr.json
relay/: README.md  __init__.py  __main__.py  assets.py  pyproject.toml  relay.py  runtime.py  session.py  windows_service.py
relay/scripts/: configure.ps1  configure.sh  install-windows-service.ps1  requirements-windows.txt  requirements.txt  run-relay.py  run-relay.sh  windows-service.py
server/: pyproject.toml
server/src/impress_remote_relay/: __init__.py  __main__.py  assets.py  localization.py  relay.py  runtime.py  session.py  windows_service.py
server/src/impress_remote_relay/web/: __init__.py  app.css  app.js  index.html
server/tests/: test_relay.py
tests/: test_build_oxt.py  test_build_release_bundle.py  test_component_bootstrap.py  test_component_runtime.py  test_config.py  test_controller.py  test_core.py  test_crypto.py  test_download_sdk.py  test_extension_component.py  test_extension_local_server.py  test_local_http_endpoints.py  test_local_server.py  test_localization.py  test_manifest.py  test_network.py  test_office_ui_bootstrap.py  test_protocol.py  test_qr.py  test_relay.py  test_tool_entrypoints.py  test_tools.py  test_version.py
tools/: build_cloudflare_bundle.py  build_cloudflare_dashboard_worker.py  build_oxt.py  build_release_bundle.py  check_manifest.py  download_sdk.py  import_localizations.py  project_version.py  release.py  shared_webui.py  validate_relay_compat.py
typings/: unohelper.pyi
(+69 files in other folders)
