# SPDX-FileCopyrightText: 2026 Bora Yarkın
# SPDX-License-Identifier: GPL-3.0-only

[project]
name = "impress-remote-relay"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["aiohttp>=3.14.1"]

[project.optional-dependencies]
dev = ["pytest>=9.1.1", "pytest-asyncio>=1.4.0", "ruff>=0.15.21"]

[project.scripts]
impress-remote-relay = "impress_remote_relay.__main__:main"

[build-system]
requires = ["setuptools>=83.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
